@@ -342,6 +342,9 @@ Trunk (unreleased changes)
     HADOOP-5322. Fix misleading/outdated comments in JobInProgress.
     (Amareshwari Sriramadasu via cdouglas)
 
+    HADOOP-5198. Fixes a problem to do with the task PID file being absent and 
+    the JvmManager trying to look for it. (Amareshwari Sriramadasu via ddas)
+
 Release 0.20.0 - Unreleased
 
   INCOMPATIBLE CHANGES
